--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,7 +13,7 @@ button {
   width: 100px;
   height: 35px;
   cursor: pointer;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 
 button:focus {
@@ -28,7 +28,7 @@ select {
   border-radius: 5px;
   border: none;
   // background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   outline: none;
 }
 
@@ -228,8 +228,9 @@ input:disabled {
     width: 900px;
     background: #384b5c;
     border-radius: 10px;
-    box-shadow: 0 4px 4px 2px rgb(73 72 72 / 20%), 0 6px 20px 0 rgb(107 106 106 / 19%);
-    color:white;
+    box-shadow: 0 4px 4px 2px rgb(73 72 72 / 20%),
+      0 6px 20px 0 rgb(107 106 106 / 19%);
+    color: white;
     height: auto;
 
     form #file {
@@ -239,7 +240,7 @@ input:disabled {
   }
 
   .navbar-collapse {
-    flex-grow: 0!important;
+    flex-grow: 0 !important;
   }
 
   table {
@@ -247,17 +248,18 @@ input:disabled {
     margin-top: 10px;
   }
 
-  table , tr, td {
+  table,
+  tr,
+  td {
     border: 1px solid gray;
   }
 
   #basic-navbar-nav {
-    flex-grow: 0!important;
+    flex-grow: 0 !important;
   }
 
-  .customStyle{
-    flex-grow: 0!important;
-
+  .customStyle {
+    flex-grow: 0 !important;
   }
   .container-table {
     width: 100%;
@@ -335,7 +337,7 @@ input:disabled {
     }
   }
 
-  .data{
+  .data {
     display: flex;
     align-items: center;
     justify-content: center;
